# gentoo-cruft

./: Cargo.toml  LICENSE  README.md
config/: cruft.yaml
src/: catalog.rs  catalogs.rs  file_info.rs  file_system.rs  fs_reader.rs  main.rs  package.rs  pkg_reader.rs  settings.rs  symlink.rs
src/catalog/: file.rs  package.rs
src/file_system/: file.rs
