[package]
name = "gentoo-cruft"
version = "1.0.0"
authors = ["Robert Gill <locke@sdf.org>"]
description = "Find files not recorded in the Gentoo package database"
edition = "2018"
license = "MIT"

[[bin]]
name = "cruft"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
clap = "2.33"
fs-tree = "0.1"
md5 = "0.7"
threadpool = "1.7"

[dependencies.config]
version = "0.10"
default-features = false
features = ["yaml"]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]
