[package]
name = "gentoo-cruft"
version = "1.0.2"
authors = ["Robert Gill <locke@sdf.org>"]
description = "Find files that are not recorded in the Gentoo package database"
repository = "https://github.com/xelkarin/gentoo-cruft"
edition = "2018"
license = "MIT"
categories = ["command-line-utilities", "filesystem"]
keywords = ["cli", "filesystem", "gentoo", "linux"]
readme = "README.md"

[[bin]]
name = "cruft"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
clap = "2.33"
md5 = "0.7"
threadpool = "1.7"
walkdir = "2.3"

[dependencies.config]
version = "0.10"
default-features = false
features = ["yaml"]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]
